@@ -194,6 +194,7 @@ t/375_user_defined.t
 t/37_user_defined.t
 t/38_user_defined2.t
 t/39_gocr.t
+t/40_gocr.t
 t/44_cancel_rotate.t
 t/45_cancel_threshold.t
 t/46_cancel_negate.t
